/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Scala application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.6.1/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the scala Plugin to add support for Scala.
    id 'scala'

    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use Scala 2.13 in our library project
    implementation libs.scala.library

    // Pekko dependencies
    implementation libs.pekko.actor.typed
    implementation libs.pekko.stream
    implementation libs.pekko.http
    implementation libs.pekko.http.spray.json
    implementation libs.spray.json

    // Configuration & Logging
    implementation libs.typesafe.config
    implementation libs.logback.classic
    implementation 'com.auth0:java-jwt:4.4.0'

    // Database & Migrations
    implementation libs.postgresql
    implementation libs.slick
    implementation libs.slick.hikaricp
    implementation libs.flyway.core
    implementation libs.flyway.database.postgresql

    // Scalatest & Testkits
    testImplementation libs.scalatest.v2.v13
    testImplementation libs.junit
    testImplementation libs.junit.v4.v13.v2.v13
    testImplementation libs.pekko.http.testkit
    testImplementation libs.pekko.stream.testkit

    // Need scala-xml at test runtime
    testRuntimeOnly libs.scala.xml.v2.v13
}

test {
    useJUnit()
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'com.hades.Application'
    applicationDefaultJvmArgs = [
        '--add-opens=java.base/sun.security.util.math.intpoly=ALL-UNNAMED',
        '--add-opens=java.base/sun.security.util.math.intpoly=jdk.crypto.ec',
        '--add-opens=java.base/sun.security.util.math=ALL-UNNAMED',
        '--add-opens=java.base/sun.security.ssl=ALL-UNNAMED',
        '--add-opens=java.base/java.text=ALL-UNNAMED',
        '--add-opens=java.base/java.lang=ALL-UNNAMED',
        '--add-opens=jdk.crypto.ec/sun.security.ec.ed=ALL-UNNAMED',
        '--add-opens=jdk.crypto.ec/sun.security.ec=ALL-UNNAMED',
        '--add-exports=java.base/sun.security.util.math.intpoly=jdk.crypto.ec',
        '--add-exports=java.base/sun.security.util.math.intpoly=ALL-UNNAMED'
    ]
}

tasks.named('run') {
    systemProperties System.properties
    environment System.getenv()
    jvmArgs = application.applicationDefaultJvmArgs
}

